# next-gen-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  LICENSE-ZLIB  Makefile  README.md  cargo_publish.sh  fix-rustdoc.css  gen_readme.py  run_miri.sh  rust-toolchain.toml
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
doc_examples/: generator.rs  generator_desugared.rs
src/: compile_fail_tests.md  coroutine.rs  generator.rs  generator_fn.rs  iter.rs  iterator.rs  lib.md  lib.rs  macro_internals.rs  prelude.rs  public_macros.rs  public_prelude.rs  tests.rs  waker.rs
src/doc_examples/: generator.rs  generator_desugared.rs
src/generator_fn/: call_boxed.rs
src/proc_macro/: Cargo.toml  LICENSE  mod.rs
src/proc_macro/doc_examples/: generator.rs  generator_desugared.rs
src/proc_macros/: Cargo.toml  mod.rs  utils.rs
src/utils/: cell_option.rs  macros.rs  mod.rs  poll_fn.rs  prelude.rs  prelude_internal.rs
tests/: proc_macro.rs  readme.rs  recursion.rs
tests/nostd/: Cargo.toml
tests/nostd/.cargo/: config
tests/nostd/src/: lib.rs  main.rs
