[package]
name = "next-gen"
version = "0.0.10"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Safe generators on stable Rust."
repository = "https://github.com/danielhenrymantilla/next-gen-rs"
documentation = "https://docs.rs/next-gen"
readme = "README-crates-io.md"

keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[dependencies]

[dependencies.proc_macro]
package = "next-gen_proc-macro"
version = "0.0.10"
path = "src/proc_macro"

[features]
std = []
external_doc = ["proc_macro/external_doc"]
verbose-expansions = ["proc_macro/verbose-expansions"]

default = ["std"]

allow-warnings = []
[package.metadata.docs.rs]
features = ["external_doc"]

[workspace]
members = ["src/proc_macro"]

