[[example]]
name = "generator"
path = "src/doc_examples/generator.rs"

# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template

[package]
name = "next-gen"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.0-rc4"  # Keep in sync
edition = "2018"
rust-version = "1.45.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/next-gen-rs"
documentation = "https://docs.rs/next-gen"
readme = "README.md"

description = "Safe generators on stable Rust."
keywords = ["generator", "yield", "coroutine", "async", "await"]
categories = ["asynchronous", "concurrency", "rust-patterns"]

[features]
default = ["std"]

nightly = ["better-docs"]  # unstable
better-docs = []  # allowed to break MSRV
std = ["alloc"]
alloc = []
ui-tests = ["better-docs"]
verbose-expansions = ["next-gen-proc_macros/verbose-expansions"]

[dependencies]
unwind_safe.version = "0.1.0"

[dependencies.next-gen-proc_macros]
path = "src/proc_macros"
version = "0.1.0-rc4"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "nightly",
]
rustdoc-args = [
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
