[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "next-gen_proc-macro"
version = "0.0.7"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

repository = "https://github.com/danielhenrymantilla/next-gen-rs"
documentation = "https://docs.rs/next-gen"
description = "Safe generators on stable Rust."
license-file = "LICENSE"

[dependencies]
fstrings = "0.2.2"
quote = "1.0.*"
syn = "1.0.*"

[features]
external_doc = []
verbose-expansions = ["syn/extra-traits", ]

[package.metadata.docs.rs]
features = ["external_doc"]
