# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "next-gen-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.1.0-rc6"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/next-gen.rs"
documentation = "https://docs.rs/next-gen"

description = "Internal: proc-macro backend of ::next_gen."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "1.0.7"  # Access to `receiver()`.
syn.features = [
    "full",
]

bat.optional = true
bat.version = "0.18.3"

[features]
verbose-expansions = ["bat"]
