[package]
name = "tinycrate"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
next-gen = { path = "..", default-features = false }

[profile.dev]
panic = "abort"
